--- a/client/css/site.css
+++ b/client/css/site.css
@@ -30,7 +30,7 @@ nav.nav {
     
     font-weight: normal;  
     
-    margin: 0 15px 20px 15px;
+    margin: 0 0 20px 0;
     padding: 5px;
     position: relative;
 }
