--- a/client/css/site.css
+++ b/client/css/site.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6,
 
 h1, h2, h3, h4,
 .h1, .h2, .h3, .h4 {
-    font-weight: 100;
+    font-weight: normal;
 }
 
 h1 > small,
@@ -28,8 +28,15 @@ h4 > .small,
 h5 > .small,
 h6 > .small {
     display: block;
-    padding-bottom: 4px;
     text-transform: uppercase;
+}
+
+h1 > small,
+h2 > small,
+h1 > .small,
+h2 > .small {
+    color: inherit;
+    font-size: 35%;
 }
 
 .panel {
@@ -81,10 +88,8 @@ h6 > .small {
     border-bottom: 1px solid #d0dae0;
     
     color: #0078d2;
-    font-weight: 100;
     
     position: relative;
-    
     margin: 0 0 20px 0;
     
     box-shadow: 0 8px 8px -8px #d0dae0;
@@ -130,7 +135,7 @@ h4.aa-heading,
 }
 
 table {
-    font-family: 'Consolas';
+    font-family: 'Consolas', 'Courier New';
 }
 
 table > thead > tr > th {
@@ -142,4 +147,8 @@ table > thead > tr > th {
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.nav > li > a > h1 {
+    margin-bottom: 0;
 }
