--- a/client/css/site.css
+++ b/client/css/site.css
@@ -143,19 +143,49 @@ table > thead > tr > th {
     font-weight: normal;
 }
 
-.aa-heading .search {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
 .nav > li > a > h1 {
     margin-bottom: 0;
 }
+
 .nav-log-pages > li > a {
     border-bottom: 1px solid #ddd;
 }
 
 .nav-log-pages > li > a * {
     font-family: 'Consolas';
+}
+
+.nav-pills > li > a {
+    border-bottom: 6px solid #eee;
+    
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
+}
+
+.nav-pills > li > a:hover {
+    border-bottom-color: #999;
+}
+
+.nav-pills > li.active > a {
+    background: #fff;
+    border-bottom: 6px solid #428bca;
+    
+    position: relative;
+}
+
+.nav-pills > li.active > a:hover {
+    background: #eee;
+}
+
+.nav-pills > li.active > a:after {
+    content: '';
+    
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 6px solid #428bca;
+    
+    position: absolute;
+    bottom: -12px;
+    right: 12px;
 }
