--- a/client/css/site.css
+++ b/client/css/site.css
@@ -134,51 +134,57 @@ h4.aa-heading,
     padding: 8px 23px 7px 0;
 }
 
-table {
-    font-family: 'Consolas', 'Courier New';
-}
-
-table > thead > tr > th {
-    font-size: 12px;
-    font-weight: normal;
-}
-
 .nav > li > a > h1 {
     margin-bottom: 0;
 }
 
-.nav-log-pages > li > a {
-    border-bottom: 1px solid #ddd;
+.nav-summary
+{
+    display: table;
+    width: 100%;
+    
+    table-layout: fixed;
 }
 
-.nav-log-pages > li > a * {
-    font-family: 'Consolas';
+.nav-summary > li {
+    display: table-cell;
+    width: 100%;
 }
 
-.nav-pills > li > a {
+.nav-summary > li > a {
     border-bottom: 6px solid #eee;
+    
+    margin: 0 2px;
     
     -webkit-border-radius: 0;
        -moz-border-radius: 0;
             border-radius: 0;
 }
 
-.nav-pills > li > a:hover {
+.nav-summary > li:first-child > a {
+    margin-left: 0;
+}
+
+.nav-summary > li:last-child > a {
+    margin-right: 0;
+}
+
+.nav-summary > li > a:hover {
     border-bottom-color: #999;
 }
 
-.nav-pills > li.active > a {
+.nav-summary > li.active > a {
     background: #fff;
     border-bottom: 6px solid #428bca;
     
     position: relative;
 }
 
-.nav-pills > li.active > a:hover {
+.nav-summary > li.active > a:hover {
     background: #eee;
 }
 
-.nav-pills > li.active > a:after {
+.nav-summary > li.active > a:after {
     content: '';
     
     border-left: 6px solid transparent;
@@ -188,4 +194,17 @@ table > thead > tr > th {
     position: absolute;
     bottom: -12px;
     right: 12px;
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+.ellipsis {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    
+    overflow: hidden;
+    width: 100%;
 }
