Alpha log book summary implementation

--- a/client/css/site.css
+++ b/client/css/site.css
@@ -201,6 +201,10 @@ table {
     table-layout: fixed;
 }
 
+table > tbody:nth-child(even) {
+    background: #f9f9f9;
+}
+
 .ellipsis {
     white-space: nowrap;
     text-overflow: ellipsis;
