--- a/client/css/site.css
+++ b/client/css/site.css
@@ -45,7 +45,7 @@ h2 > .small {
 
 .aa-flight-card {
     color: #fff;
-    background: #4db4fa
+    background: #4db4fa;
 }
 
 .aa-flight-card h1,
@@ -211,4 +211,31 @@ table > tbody:nth-child(even) {
     
     overflow: hidden;
     width: 100%;
+}
+
+.nav-horizontal {
+    list-style: none;
+    
+    margin: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.nav-horizontal li {
+    display: inline-block;
+    
+    margin: 0 15px;
+    padding: 0;
+    
+    width: 212px;
+}
+
+.nav-horizontal li:first-child {
+    margin-left: 0;
+}
+
+.nav-horizontal li:last-child {
+    margin-right: 0;
 }
