--- a/client/css/site.css
+++ b/client/css/site.css
@@ -153,6 +153,7 @@ h4.aa-heading,
 
 .nav-summary > li > a {
     border-bottom: 6px solid #eee;
+    color: #999;
     
     margin: 0 2px;
     
@@ -174,6 +175,8 @@ h4.aa-heading,
 }
 
 .nav-summary > li.active > a {
+    color: #428bca;
+    
     background: #fff;
     border-bottom: 6px solid #428bca;
     
